# boolsurf

./: .gitignore  CMakeLists.txt  algorithm.md  images.md  todo-paper.md  todo.md  todo.txt
apps/: CMakeLists.txt  graph_faces.py  sum-up.md  tests.txt  todo.md
apps/boolsurf/: CMakeLists.txt  app.h  boolsurf.cpp  boolsurf.h  boolsurf_io.cpp  boolsurf_io.h  boolsurf_utils.h  gui.cpp  io.h  render.h  test.cpp
apps/boolsurf/ext/: delaunator.cpp  delaunator.hpp  earcut.hpp
apps/gui/: CMakeLists.txt  app.h  gui.cpp  render.h
apps/test/: CMakeLists.txt  batch-test.py  clean-test.py  manual_test.py  test.cpp
apps/test/serialize/: serialize.h  update.sh
data/complex_meshes/: bimba.ply  bunny_low_poly.ply  cat_scan.ply  cow_lowpoly.ply  cow_notsolowpoly.ply  dragon.ply  eight200k-remeshed.ply  forest_dragon.ply  gnome.ply  horse_horse.ply  hunter.ply  knight.ply  lioness_queen.ply  penguin_pawn.ply  seal_bishop.ply  stone_house.ply  torus_100k_smooth.ply
data/final_tests/tests/: big_dragon_italy.json  bimba.json  bob.json  cup_final.json  high_poly_cow.json  kitten.json  lady_pastello.json  low_poly_cow.json  lucy.json  nefertiti.json  nefertiti_ops.json  pumpkin.json
data/homotopy/: bitorus_basis.json  bob-hd_basis.json  eight200k-remeshed_basis.json  fertility_250k_basis.json  kitten_250k_basis.json  torus.ply  torus_100k.ply  torus_100k_basis.json  torus_basis.json  tritorus_basis.json
data/models/: dome.ply  sphere.ply  sphere_complete.ply  torus.ply
data/tests/: 3torus-spiral-rev.json  bitorus-homotopy1.json  bitorus-homotopy2.json  bitorus-homotopy3.json  bitorus-homotopy4.json  bitorus-homotopy5.json  bitorus-homotopy6.json  bitorus-homotopy7.json  bunny0.json  bunny1.json  bunny2.json  bunny3.json  elephant0.json  kitten.json  loop0.json  loop1.json  loop2.json  multiple2.json  pixar.json  pumpkin.json  s.json  sphere0.json  sphere1.json  sphere2.json  sphere3.json  torus0.json  torus1.json  torus2.json  torus3.json  torus4.json
data/tests/examples/tests/: bunny1.json  bunny3.json  loop0.json  loop1.json  loop2.json  sphere0.json  sphere1.json  sphere2.json  sphere3.json  torus0.json  torus1.json  torus2.json  torus3.json  torus4-reverse.json  torus4-reverse.txt  torus4.json  torus4.txt  torus5.json  torus5.txt  torus7.json  torus7.txt  torus8.json  torus9.json  torus9.txt  tritorus-13loops.json  tritorus-3loops.json  tritorus-5loops.json  tritorus-5loops.txt  tritorus-9loops.json  tritorus-9loops.txt
exts/cinolib/include/cinolib/: min_max_inf.h
libs/: CMakeLists.txt
libs/boolsurf/: CMakeLists.txt  boolsurf.cpp  boolsurf.h  boolsurf_io.cpp  boolsurf_io.h  boolsurf_utils.h
libs/yocto/: yocto_cli.h  yocto_mesh.cpp  yocto_mesh.h  yocto_shape.cpp  yocto_trace.cpp
libs/yocto_gui/: CMakeLists.txt  yocto_font.cpp  yocto_font.h  yocto_imgui.cpp  yocto_imgui.h  yocto_opengl.cpp  yocto_opengl.h  yocto_shade.cpp  yocto_shade.h  yocto_window.cpp  yocto_window.h
notebook/: test_results5_stats.csv  timings.ipynb
scripts/: build.py  convert-bezier.py  convert-table.py  merge-tests.py  old_svg_parser.py  render.py  svg_parser.py
